# music_analysis

./: .gitignore
essentia_util/: CMakeLists.txt
essentia_util/src/: essentia_util.cpp
essentia_util/test/: CMakeLists.txt  hpcp.py  main.cpp
essentia_util/test/output/: hpcp.csv
essentia_util_sdk/include/: essentia_util.h
essentia_util_sdk/src/: essentia_util.cpp
essentia_util_sdk/test/: CMakeLists.txt  main.cpp
essentia_util_sdk/test/output/: hpcp.csv
examples/: key_table.csv
py_essentia_util/: CMakeLists.txt  test_bindings.py
py_essentia_util/bindings/: py_essentia_util.cpp
